cmake_minimum_required(VERSION 3.1.0)
project(zlibtest)
include_directories( . ./include )
add_executable(zlibtest main.cpp)
find_package (Threads)
find_package( ZLIB REQUIRED )
if ( ZLIB_FOUND )
    include_directories( ${ZLIB_INCLUDE_DIRS} )
    target_link_libraries( zlibtest ${ZLIB_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} dl)
endif( ZLIB_FOUND )
